# agents

./: .env  .gitignore  Dockerfile.sandbox  ROADMAP.md  pyproject.toml  setup.md
clients/http-client/: package-lock.json  package.json
clients/http-client/app/: page.tsx
clients/http-client/app/components/: AgentGraph.tsx  AgentNode.tsx  EventItem.tsx  ExecutionLog.tsx  Main.tsx  Pipeline.tsx  StatusHeader.tsx
clients/http-client/app/dag/: dag.ts  flow.ts
clients/http-client/app/hooks/: useSocket.tsx
src/: main.py  run.py
src/agents/: __init__.py  agent_response.py  base_agent.py  decision_agent.py  decision_response.py  python_agent.py  tool_agent.py  tool_selection_agent.py  types.py
src/core/: __init__.py  events.py  inference_guard.py  llm_wrapper.py  log_collector.py  types.py
src/mcp_servers/: test.py
src/orchestration/: __init__.py  director.py  main_flow.py
src/server/: server.py  types.py
src/tools/: __init__.py  examples.py  math_tool.py  python_tool.py  registry.py  tool.py  tool_executor_router.py
