[project]
name = "agents"
version = "0.1.0"
description = "agent framework"
authors = [{ name = "pausala", email = "pau.salaf@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["pydantic (>=2.12.5,<3.0.0)", "requests (>=2.32.5,<3.0.0)", "fastapi (>=0.129.2,<0.130.0)", "uvicorn[standard] (>=0.41.0,<0.42.0)"]

[dependency-groups]
test = []
lint = ["isort (>=8.0.0,<9.0.0)", "black (>=26.1.0,<27.0.0)"]
dev = [{ include-group = "test" }, { include-group = "lint" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
